refactor: cleaning code, change all components to functions

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^2.3.0",
     "gh-pages": "^2.1.1",
     "jest": "^24.9.0"
   }
